// Proto class, makes it easier to autogenerate code using Google's Protobuf functionality.

syntax = "proto3";

// The service definition.
service StudentService {
    // Sends a message
    rpc GetStudents (StudentRequest) returns (StudentReply) {}
}

// The request message containing the students name.
message StudentRequest {
    string name = 1;
}

// The response message containing the students
message StudentReply {
    string info = 1;
    
}